--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,11 +32,7 @@ services:
       - MYSQL_ROOT_PASSWORD=change_me
     ports:
       - "3306:3306"
-    command:
-      [
-        "mysqld",
-        "--sql-mode=STRICT_TRANS_TABLES,NO_ZERO_IN_DATE,NO_ZERO_DATE,ERROR_FOR_DIVISION_BY_ZERO,NO_AUTO_CREATE_USER,NO_ENGINE_SUBSTITUTION",
-      ]
+    command: [ "mysqld", "--sql-mode=STRICT_TRANS_TABLES,NO_ZERO_IN_DATE,NO_ZERO_DATE,ERROR_FOR_DIVISION_BY_ZERO,NO_AUTO_CREATE_USER,NO_ENGINE_SUBSTITUTION" ]
     volumes:
       - my-datavolume:/var/lib/mysql:rw
   redis:
@@ -56,7 +52,7 @@ services:
     environment:
       - transport.host=localhost
       - bootstrap.memory_lock=false
-      - "ES_JAVA_OPTS=-Xms1500m -Xmx1500m"
+      - "ES_JAVA_OPTS=-Xms1000m -Xmx1000m"
       - discovery.type=single-node
       # Silence "security features are not enabled" warnings
       # https://github.com/elastic/elasticsearch/issues/78500
