--- a/test/fixtures/bookmarks.yml
+++ b/test/fixtures/bookmarks.yml
@@ -627,3 +627,16 @@ bookmark_00016:
   id: 16
   user_id: 
   hidden_by_admin: false
+bookmark_00047: 
+  pseud_id: 22
+  bookmarkable_type: Series
+  created_at: 2009-07-18 00:14:46 Z
+  bookmarkable_id: 5
+  delta: true
+  updated_at: 2009-07-18 00:14:46 Z
+  private: false
+  bookmarker_notes: mixed visibility series yay
+  rec: false
+  id: 47
+  user_id: 
+  hidden_by_admin: false
